--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,4 +1,13 @@
-<%- include('../layouts/layout') %>
-
-<%- vehicleDetailHTML %>
-
+<main class="vehicle-detail">
+  <div class="vehicle-image">
+    <img src="<%= vehicle.inv_image %>" alt="Image of <%= vehicle.inv_make %> <%= vehicle.inv_model %>">
+  </div>
+  <div class="vehicle-info">
+    <h1><%= vehicle.inv_make %> <%= vehicle.inv_model %></h1>
+    <p><strong>Year:</strong> <%= vehicle.inv_year %></p>
+    <p><strong>Price:</strong> $<%= new Intl.NumberFormat('en-US').format(vehicle.inv_price) %></p>
+    <p><strong>Mileage:</strong> <%= new Intl.NumberFormat('en-US').format(vehicle.inv_miles) %> miles</p>
+    <p><strong>Color:</strong> <%= vehicle.inv_color %></p>
+    <p class="vehicle-description"><%= vehicle.inv_description %></p>
+  </div>
+</main>
