--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,6 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="icon" href="images/site/favicon-32x32.png" type="image/favicon-32x32.png" />
+    <link rel="icon" type="image/png" href="/images/site/favicon-32x32.png" />
 
 </head>
