--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -190,7 +190,7 @@ footer {
 }
 
 .vehicle-info h1 {
-  color: #02b0d2;
+  color: black;
   margin-bottom: 1rem;
   font-weight: bold;
   font-size: 2rem;
