done for the day

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <body>
-    <main>
-      <h1>Welcome to CSE Motors!</h1>
+  <main>
+    <h1>Welcome to CSE Motors!</h1>
+    <%- messages() %>
       <section class="hero">
         <div class="hero-text">
           <h2>DMC Delorean</h2>
@@ -45,8 +46,9 @@
             <li>“The most futuristic ride of our day.” (4.5/5)</li>
             <li>“80’s livin and I love it!” (5/5)</li>
           </ul>
-        </section>        
+        </section>
       </div>
-    </main>   
+  </main>
 </body>
+
 </html>
