--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -11,7 +11,8 @@
         <input type="email" id="email" name="email" required>
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" required
+              pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
         
         <p class="password-info">
             Passwords must be minimum of 12 characters and include 1 capital letter, 1 number and 1 special character.
