--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -20,8 +20,8 @@
 
     <label for="password">Password:</label>
       <input type="password" id="password" name="account_password" required
-        <%     pattern="^(?=.*[A-Z])(?=.*\\d)(?=.*[!@#$%^&*])[A-Za-z\\d!@#$%^&*]{12,}$" %>
-             title="Password must be at least 12 characters, contain an uppercase letter, a number, and a special character.">
+            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
+            
         
     <p class="password-info">
             Passwords must be minimum of 12 characters and include 1 capital letter, 1 number and 1 special character.
