--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -2,21 +2,26 @@
   <h1><%= title %></h1>
 
   <% if (errors) { %>
-    <div class="flash-message"><%= errors %></div>
-  <% } %>
+  <ul class="notice">
+    <% errors.array().forEach(error => { %>
+      <li><%= error.msg %></li>
+    <% }) %>
+  </ul>
+<% } %>
+
 
   <form id="register-form" action="/account/register" method="post">
     <label for="first_name">First Name:</label>
     <input type="text" id="first_name" name="account_firstname" required 
-           value="<%= typeof first_name != 'undefined' ? first_name : '' %>">
+            value="<%= typeof account_firstname != 'undefined' ? account_firstname : '' %>">
 
     <label for="last_name">Last Name:</label>
     <input type="text" id="last_name" name="account_lastname" required 
-           value="<%= typeof last_name != 'undefined' ? last_name : '' %>">
+           value="<%= typeof account_lastname != 'undefined' ? account_lastname : '' %>">
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="account_email" required 
-           value="<%= typeof email != 'undefined' ? email : '' %>">
+           value="<%= typeof account_email != 'undefined' ? account_email : '' %>">
 
     <label for="password">Password:</label>
       <input type="password" id="password" name="account_password" required
