--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -2,16 +2,22 @@
 <main>
   <h1><%= title %></h1>
 
-  <% if (message) { %>
-    <div class="flash-message"><%= message %></div>
-  <% } %>
+  <% if (errors) { %>
+  <ul class="notice">
+    <% errors.array().forEach(error => { %>
+      <li><%= error.msg %></li>
+    <% }) %>
+  </ul>
+<% } %>
+
 
     <form id="login-form" action="/account/login" method="post">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="account_email" required
+          value="<%= locals.account_email %>">
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required
+        <input type="password" id="password" name="account_password" required
               pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
         
         <p class="password-info">
