--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -7,4 +7,18 @@
     <li><a href="/inv/add-classification">Add New Classification</a></li>
     <li><a href="/inv/add-inventory">Add New Inventory</a></li>
   </ul>
+  <h2>Manage Inventory</h2>
+<p>Select a classification to view its vehicles.</p>
+
+<!-- Render the classification <select> built in the controller -->
+<%- classificationSelect %>
+
+<!-- Table that JS will fill -->
+<table id="inventoryDisplay"></table>
+
+<noscript>JavaScript must be enabled to use this page.</noscript>
+
+<!-- Hook up the page JS -->
+<script src="../../js/inventory.js"></script>
+
 </main>
