--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -2,6 +2,10 @@
 <main>
   <h1><%= title %></h1>
 
+  <% if (message && message.length) { %>
+  <div class="flash-message"><%= message %></div>
+  <% } %>
+
   <% if (errors) { %>
   <ul class="notice">
     <% errors.array().forEach(error => { %>
