--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -2,17 +2,17 @@
 <main>
   <h1><%= title %></h1>
 
-  <% if (message && message.length) { %>
-  <div class="flash-message"><%= message %></div>
+  <% if (errors) { %>
+    <ul class="notice">
+      <% errors.array().forEach(error => { %>
+        <li><%= error.msg %></li>
+      <% }) %>
+    </ul>
   <% } %>
 
-  <% if (errors) { %>
-  <ul class="notice">
-    <% errors.array().forEach(error => { %>
-      <li><%= error.msg %></li>
-    <% }) %>
-  </ul>
-<% } %>
+  <% if (message) { %>
+    <div class="flash-message"><%= message %></div>
+  <% } %>
 
 
     <form id="login-form" action="/account/login" method="post">
