--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,15 +1,27 @@
-<main id="account-management">
+<main class="mgmnt-wrapper">
   <h1><%= title %></h1>
 
-  <% if (message && message.length) { %>
-    <div class="flash-message"><%= message %></div>
-  <% } %>
-
-  <% if (errors) { %>
-    <div class="errors">
-      <% errors.forEach(e => { %><p><%= e.msg %></p><% }) %>
+  <% if (message) { %>
+    <div class="flash-message">
+      <%= message %>
     </div>
   <% } %>
 
-  <p>You’re logged in.</p>
+  <h2 class="account-greeting">Welcome <%= accountData.account_firstname %></h2>
+
+  <p class="account-update-link">
+    <a href="/account/update/<%= accountData.account_id %>">
+      Update Account Information
+    </a>
+  </p>
+
+  <% if (accountData.account_type === 'Employee' || accountData.account_type === 'Admin') { %>
+    <section class="inventory-section">
+      <h3>Inventory Management</h3>
+      <p>
+        <a class="inventory-link" href="/inv/">Manage Inventory</a>
+      </p>
+    </section>
+  <% } %>
 </main>
+
