--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -1,4 +1,5 @@
 <main>
+  <div class="form-wrapper">
   <h1>Add New Classification</h1>
 
   <% if (errors) { %>
@@ -25,4 +26,5 @@
     >
     <button type="submit">Add Classification</button>
   </form>
+  </div>
 </main>
