--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -1,4 +1,5 @@
 <main>
+  <div class="form-wrapper">
   <h1>Add New Inventory</h1>
 
   <% if (errors) { %>
@@ -46,4 +47,5 @@
 
     <button type="submit">Add Vehicle</button>
   </form>
+</div>
 </main>
