--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,3 +1,13 @@
+<!-- **********************************************
+     * Account Management View
+     * --------------------------------------------
+     * Displays the account dashboard after login.
+     * Shows flash messages and a personalized greeting.
+     * Provides link to update account information.
+     * Displays inventory management section for
+     * users with Employee or Admin privileges.
+     ********************************************** -->
+
 <main class="mgmnt-wrapper">
   <h1><%= title %></h1>
 
@@ -24,4 +34,3 @@
     </section>
   <% } %>
 </main>
-
