--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,3 +1,13 @@
+<!-- **********************************************
+     * Error View
+     * --------------------------------------------
+     * Displays error messages for server or client
+     * errors (500 or 404).
+     * - Uses <%- message %> for raw HTML support.
+     * - Provides specific messages for 500 and 404.
+     * - Includes link back to the home page.
+     ********************************************** -->
+
 <main>
   <h1><%= title %></h1>
 
