--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,3 +1,11 @@
+<!-- **********************************************
+     * Login View
+     * --------------------------------------------
+     * Displays the login form for existing users.
+     * Shows validation errors and flash messages.
+     * Contains email and password fields.
+     * Includes link to the registration page.
+     ********************************************** -->
 
 <main>
   <h1><%= title %></h1>
@@ -14,23 +22,20 @@
     <div class="flash-message"><%= message %></div>
   <% } %>
 
+  <form id="login-form" action="/account/login" method="post">
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="account_email" required
+      value="<%= locals.account_email %>">
 
-    <form id="login-form" action="/account/login" method="post">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="account_email" required
-          value="<%= locals.account_email %>">
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="account_password" required
-              pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
-        
-        <p class="password-info">
-            Passwords must be minimum of 12 characters and include 1 capital letter, 1 number and 1 special character.
-        </p>
-        <button type="submit">Login</button>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="account_password" required
+      pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
     
+    <p class="password-info">
+      Passwords must be minimum of 12 characters and include 1 capital letter, 1 number and 1 special character.
+    </p>
+    <button type="submit">Login</button>
 
-        <p>Don't have an account? <a href="/account/register">Register here</a></p>
-    </form>
+    <p>Don't have an account? <a href="/account/register">Register here</a></p>
+  </form>
 </main>
-
