--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,37 +1,62 @@
+<!-- **********************************************
+     * Account Registration View
+     * --------------------------------------------
+     * Displays the registration form for creating
+     * a new account. Shows any validation errors
+     * passed from the server. 
+     * Includes fields for first name, last name,
+     * email, and password with required formatting.
+     ********************************************** -->
+
 <main>
   <h1><%= title %></h1>
 
   <% if (errors) { %>
-  <ul class="notice">
-    <% errors.array().forEach(error => { %>
-      <li><%= error.msg %></li>
-    <% }) %>
-  </ul>
-<% } %>
-
+    <ul class="notice">
+      <% errors.array().forEach(error => { %>
+        <li><%= error.msg %></li>
+      <% }) %>
+    </ul>
+  <% } %>
 
   <form id="register-form" action="/account/register" method="post">
     <label for="first_name">First Name:</label>
-    <input type="text" id="first_name" name="account_firstname" required 
-            value="<%= locals.account_firstname %>">
+    <input 
+      type="text" 
+      id="first_name" 
+      name="account_firstname" 
+      required 
+      value="<%= locals.account_firstname %>">
 
     <label for="last_name">Last Name:</label>
-    <input type="text" id="last_name" name="account_lastname" required 
-           value="<%= locals.account_lastname %>">
+    <input 
+      type="text" 
+      id="last_name" 
+      name="account_lastname" 
+      required 
+      value="<%= locals.account_lastname %>">
 
     <label for="email">Email:</label>
-    <input type="email" id="email" name="account_email" required 
-           value="<%= locals.account_email %>">
+    <input 
+      type="email" 
+      id="email" 
+      name="account_email" 
+      required 
+      value="<%= locals.account_email %>">
 
     <label for="password">Password:</label>
-      <input type="password" id="password" name="account_password" required
-            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
-            
+    <input 
+      type="password" 
+      id="password" 
+      name="account_password" 
+      required
+      pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
         
     <p class="password-info">
-            Passwords must be minimum of 12 characters and include 1 capital letter, 1 number and 1 special character.
+      Passwords must be minimum of 12 characters and include 
+      1 capital letter, 1 number and 1 special character.
     </p>
+
     <button type="submit">Register</button>
   </form>
 </main>
-
