--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,14 +2,15 @@
   <span class="siteName">
     <a href="/" title="Return to home page">CSE Motors</a>
   </span>
-  <div id="tools">
+  <nav id="tools">
     <% if (loggedin) { %>
-      <a href="/account/" title="Account Management">
-        Welcome <%= accountData.account_firstname %>
-      </a>
-      <a href="/account/logout" title="Log out">Logout</a>
+      <span class="welcome-text">
+        Welcome, <a href="/account/" title="Account Management"><%= accountData.account_firstname %></a>
+      </span>
+      <a href="/account/favorites" class="nav-link">Saved Vehicles</a>
+      <a href="/account/logout" class="nav-link logout-link" title="Log out">Logout</a>
     <% } else { %>
-      <a href="/account/login" title="Click to log in">My Account</a>
+      <a href="/account/login" class="nav-link" title="Click to log in">My Account</a>
     <% } %>
-  </div>
+  </nav>
 </header>
