--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,12 @@
+<!-- **********************************************
+     * Header Partial
+     * --------------------------------------------
+     * Displays the site name and top navigation
+     * links. Shows different options depending on
+     * login state, including account access, saved
+     * vehicles, and logout link.
+     ********************************************** -->
+
 <header id="top-header">
   <span class="siteName">
     <a href="/" title="Return to home page">CSE Motors</a>
@@ -10,7 +19,4 @@
       <a href="/account/favorites" class="nav-link">Saved Vehicles</a>
       <a href="/account/logout" class="nav-link logout-link" title="Log out">Logout</a>
     <% } else { %>
-      <a href="/account/login" class="nav-link" title="Click to log in">My Account</a>
-    <% } %>
-  </nav>
-</header>
+      <a href="/
