--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,3 +1,10 @@
+<!-- **********************************************
+     * Navigation Partial
+     * --------------------------------------------
+     * Displays the site navigation menu generated
+     * dynamically from server-side data.
+     ********************************************** -->
+
 <nav>
-    <%- nav%>
+    <%- nav %>
 </nav>
