--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -1,68 +1,78 @@
+<!-- **********************************************
+     * Edit Inventory View
+     * --------------------------------------------
+     * Displays a form to update existing vehicle details.
+     * - Pre-fills form fields with the current vehicle data.
+     * - Includes validation error messages and flash messages.
+     * - Classification dropdown is injected from server-side utilities.
+     * - Update button is initially disabled until changes are made
+       (enabled by /js/inv-update.js client-side script).
+     ********************************************** -->
+
 <main>
-    <div class="form-wrapper">
-    <h1><%=title %></h1>
+  <div class="form-wrapper">
+    <h1><%= title %></h1>
 
     <% if (errors) { %>
-        <ul class="notice">
-            <% errors.array().forEach(error=> { %>
-                <li>
-                    <%= error.msg %>
-                </li>
-                <% }) %>
-        </ul>
-        <% } %>
+      <ul class="notice">
+        <% errors.array().forEach(error=> { %>
+          <li><%= error.msg %></li>
+        <% }) %>
+      </ul>
+    <% } %>
 
-            <% if (message && message.length > 0) { %>
-                <div class="flash-message">
-                    <%= message[0] %>
-                </div>
-            <% } %>
+    <% if (message && message.length > 0) { %>
+      <div class="flash-message">
+        <%= message[0] %>
+      </div>
+    <% } %>
 
+    <form id="updateForm" action="/inv/update" method="post">
+      <input type="hidden" name="inv_id" value="<%= inv_id %>">
 
-                    <form id="updateForm" action="/inv/update" method="post">
-                        <input type="hidden" name="inv_id" value="<%= inv_id %>">
-                        <label for="classification_id">Classification</label>
-                        <%- classificationSelect %> <!-- this is injected HTML, not escaped -->
+      <label for="classification_id">Classification</label>
+      <%- classificationSelect %> <!-- this is injected HTML, not escaped -->
 
-                            <label for="inv_make">Make</label>
-                            <input type="text" name="inv_make" id="inv_make" required
-                                value="<%= typeof inv_make != 'undefined' ? inv_make : '' %>">
+      <label for="inv_make">Make</label>
+      <input type="text" name="inv_make" id="inv_make" required
+        value="<%= typeof inv_make != 'undefined' ? inv_make : '' %>">
 
-                            <label for="inv_model">Model</label>
-                            <input type="text" name="inv_model" id="inv_model" required
-                                value="<%= typeof inv_model != 'undefined' ? inv_model : '' %>">
+      <label for="inv_model">Model</label>
+      <input type="text" name="inv_model" id="inv_model" required
+        value="<%= typeof inv_model != 'undefined' ? inv_model : '' %>">
 
-                            <label for="inv_description">Description</label>
-                            <textarea name="inv_description" id="inv_description"
-                                required><%= typeof inv_description != 'undefined' ? inv_description : '' %></textarea>
+      <label for="inv_description">Description</label>
+      <textarea name="inv_description" id="inv_description" required>
+        <%= typeof inv_description != 'undefined' ? inv_description : '' %>
+      </textarea>
 
-                            <label for="inv_image">Image Path</label>
-                            <input type="text" name="inv_image" id="inv_image" required
-                                value="<%= typeof inv_image != 'undefined' ? inv_image : '/images/vehicles/no-image.png' %>">
+      <label for="inv_image">Image Path</label>
+      <input type="text" name="inv_image" id="inv_image" required
+        value="<%= typeof inv_image != 'undefined' ? inv_image : '/images/vehicles/no-image.png' %>">
 
-                            <label for="inv_thumbnail">Thumbnail Path</label>
-                            <input type="text" name="inv_thumbnail" id="inv_thumbnail" required
-                                value="<%= typeof inv_thumbnail != 'undefined' ? inv_thumbnail : '/images/vehicles/no-image.png' %>">
+      <label for="inv_thumbnail">Thumbnail Path</label>
+      <input type="text" name="inv_thumbnail" id="inv_thumbnail" required
+        value="<%= typeof inv_thumbnail != 'undefined' ? inv_thumbnail : '/images/vehicles/no-image.png' %>">
 
-                            <label for="inv_price">Price</label>
-                            <input type="number" step="0.01" name="inv_price" id="inv_price" required
-                                value="<%= typeof inv_price != 'undefined' ? inv_price : '' %>">
+      <label for="inv_price">Price</label>
+      <input type="number" step="0.01" name="inv_price" id="inv_price" required
+        value="<%= typeof inv_price != 'undefined' ? inv_price : '' %>">
 
-                            <label for="inv_year">Year</label>
-                            <input type="number" name="inv_year" id="inv_year" required
-                                value="<%= typeof inv_year != 'undefined' ? inv_year : '' %>">
+      <label for="inv_year">Year</label>
+      <input type="number" name="inv_year" id="inv_year" required
+        value="<%= typeof inv_year != 'undefined' ? inv_year : '' %>">
 
-                            <label for="inv_miles">Miles</label>
-                            <input type="number" name="inv_miles" id="inv_miles" required
-                                value="<%= typeof inv_miles != 'undefined' ? inv_miles : '' %>">
+      <label for="inv_miles">Miles</label>
+      <input type="number" name="inv_miles" id="inv_miles" required
+        value="<%= typeof inv_miles != 'undefined' ? inv_miles : '' %>">
 
-                            <label for="inv_color">Color</label>
-                            <input type="text" name="inv_color" id="inv_color" required
-                                value="<%= typeof inv_color != 'undefined' ? inv_color : '' %>">
+      <label for="inv_color">Color</label>
+      <input type="text" name="inv_color" id="inv_color" required
+        value="<%= typeof inv_color != 'undefined' ? inv_color : '' %>">
 
-                            <button type="submit" disabled>Update Vehicle</button>
-                            
-                    </form>
-                    <script src="/js/inv-update.js"></script>
-    </div>
+      <button type="submit" disabled>Update Vehicle</button>
+    </form>
+
+    <script src="/js/inv-update.js"></script>
+  </div>
 </main>
