--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,4 +19,7 @@
       <a href="/account/favorites" class="nav-link">Saved Vehicles</a>
       <a href="/account/logout" class="nav-link logout-link" title="Log out">Logout</a>
     <% } else { %>
-      <a href="/
+      <a href="/account/login" class="nav-link" title="Click to log in">My Account</a>
+    <% } %>
+  </nav>
+</header>
